--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
 <h1>Skills</h1>
 <div class="skills">
   <div class="skills-img cpp_pic">
-    <img src="cpp.jpg" alt="">
-  <h1>C++</h1>
+    <img src="java.png" alt="">
+  <h1>JAVA</h1>
   </div>
   <div class="skills-img html_pic ">
-    <img src="html.jpg" alt="">
+    <img src="html.png" alt="">
   <h1>Html</h1>
   </div>
   <div class="skills-img css_pic ">
-    <img src="css.jpg" alt="">
+    <img src="css.png" alt="">
   <h1>CSS</h1>
   </div>
   <div class="skills-img js_pic">
-    <img src="Js.jpg" alt="">
+    <img src="js.png" alt="">
   <h1>Javascript</h1>
   </div>
 </div>
