add hover property and background image

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                </header>
 <section class="home" id ="home">
   <div class="home-text">
-    <h5>Hello, I am</h5>
-    <h1>Kartik Taak</h1>
-    <h6>This is my official Portfolio website to show all Details and work experience about my Web <span>Devlopment.</span></h6>
+    <h4>Hello, I am</h5>
+    <h1 class="h">Kartik Taak</h1>
+    <h5>This is my official Portfolio website to show all Details and work experience about my Web <span>Devlopment.</span></h6>
     <p>
       I design and develop stylish,<br>
       modern websites and online stores.
