--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
     <a href="#" class="logo">portfo<span>lio</span></a>
-    <div class="bx bx-menu " id="menu-icon"> </div>
+    <div class="bx bx-menu " id="menu-icon" style="color:gray"></div>
       <ul class="navbar">
            <li><a href="#home">Home</a></li>
            <li><a href="#skills">Skills</a></li>
@@ -30,9 +30,9 @@
       modern websites and online stores.
     </p>
   </div>
-  <!-- <div class="home-img">
-    <img src="OIP.jpg" alt="">
-  </div> -->
+  <div class="btn_cv">
+   <a href="" target="_blank">Download CV</a>
+  </div>
 </section>
 
 
@@ -60,7 +60,7 @@
 
 <section class="about" id="about">
   <div class="about-img">
-    <img src="s.jpg" alt="">
+    <img src="bg.jpeg" alt="">
 
 
   </div>
@@ -102,6 +102,6 @@
 </div>
 
 
-
+<script src="JS.js"></script>
   </body>
 </html>
