--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Portfolio website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -36,7 +36,7 @@
 </section>
 
 
-<section id="skills">
+<section id="skills" >
 <h1>Skills</h1>
 <div class="skills">
   <div class="skills-img cpp_pic">
@@ -60,7 +60,7 @@
 
 <section class="about" id="about">
   <div class="about-img">
-    <img src="bg.jpeg" alt="">
+    <img src="s4.png" alt="">
 
 
   </div>
@@ -101,7 +101,8 @@
   </p>
 </div>
 
+<script src="https://unpkg.com/scrollreveal"></script>
 
-<script src="JS.js"></script>
+<script type="text/javascript" src="JS.js"></script>
   </body>
 </html>
