--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             web animations. I can provide clean code and pixel perfect design. I
             also make the website more & more interactive with web animations. A
             responsive design make your website accessible to all users,
-            regardless of their device.</h2>
+            regardless of their device..</h2>
 
 </div>
 
